--- a/templates/candybar.html
+++ b/templates/candybar.html
@@ -20,7 +20,7 @@
     <form action="{{ topic_base|e }}/[[urlencode(context)]]" method="post"
           onsubmit="vlaahEmbed.load('[[context]]', this); return false;"
           style="{{ cssreset() }} font-size: 0;">
-      <input type="hidden" name="prefer" value="{{ prefer }}" />
+      <input type="hidden" name="type" value="{{ prefer }}" />
       <input src="{{ static|e }}/images/transparent.gif"
              type="image" alt="{{ prefer }}"
              class="vlaah-{{ prefer }}-express" style="
@@ -46,7 +46,7 @@
     </form>
     <form style="display: none; {{ cssreset() }}"
           onsubmit="vlaahEmbed.load('[[context]]', this); return false;">
-      <input type="hidden" name="_method" value="delete" />
+      <input type="hidden" name="__method__" value="delete" />
       <input src="{{ static|e }}/images/transparent.gif"
              type="image" alt="{{ prefer }}"
              class="vlaah-plus-cancel" style="
